# omnimarket

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.projection  README.md  build_loop_workflow.yaml  docker-compose.projection.yml  golden_chain_sweep_workflow.yaml  omnibase_compat  omnibase_core  pyproject.toml
.github/workflows/: auto-merge.yml  auto-tag-on-merge.yml  ci.yml  contract-validation.yml  cr-thread-gate-caller.yml  cr-thread-gate.yml  deploy-gate.yml  hostile-reviewer.yml  linear-close-on-merge.yml  omni-standards-compliance.yml  onex-schema-compat.yml  plugin-compat-gate.yml  pr-arch-review.yml  pr-review-bot.yml  release-dry-run.yml  release.yml  runtime-rebuild-trigger.yml  security-scan.yml  stale-todo-gate.yml  todo-audit-on-merge.yml
.onex_state/: workflow_result.json
docs/: node-testing.md
docs/evidence/: overseer-part1-proof-of-life-2026-04-09.md
docs/tracking/: 2026-04-21-kafka-topic-emit-probe-node.md  2026-04-21-merge-effect-node.md
fixtures/: classified_prs_sample.json  ledger_hash_computed.json  merge_sweep_input_sample.json  sweep_outcome_classified.json
scripts/: apply_branch_protection.sh  generate_adapter.py  generate_adapters.py  generate_catalog.py  generate_node.py  lint_no_hardcoded_topics.py  proof_of_life_overseer_verifier.py  proof_of_life_seam_parallel.py  run_four_node_proof.sh  run_l1_proof.sh  run_merge_sweep_exec_proof.sh  run_merge_sweep_phase2_proof.sh  trigger_rebuild_on_merge.py  validate_catalog.py
scripts/ci/: check_entry_point_format.py  run_runtime_sweep.py
scripts/validation/: run_topic_lint.sh  topic_naming_baseline.txt  validate_pr_deploy_required.py
src/omnimarket/: __init__.py  model_policy.yaml
src/omnimarket/adapters/: asyncpg_adapter.py  database.py
src/omnimarket/adapters/claude_code/: README.md  aislop_sweep_SKILL.md  template_SKILL.md
src/omnimarket/adapters/codex/: README.md  aislop-sweep-instructions.md  template.md
src/omnimarket/adapters/cursor/: README.md  aislop-sweep.mdc  template.mdc
src/omnimarket/adapters/gemini/: README.md  aislop-sweep.md  template.md
src/omnimarket/enums/: __init__.py  enum_buildability.py  enum_node_role.py  enum_polish_task_class.py
src/omnimarket/events/: __init__.py  ledger.py
src/omnimarket/inference/: __init__.py  bridge_config_loader.py
src/omnimarket/logging/: __init__.py  structured_logger.py  topics.py
src/omnimarket/models/: model_metadata.py  model_polish_task_envelope.py
src/omnimarket/projection/: __init__.py  envelope.py  protocol_database.py  runner.py
src/omnimarket/protocols/: __init__.py  protocol_overseer_verifier.py
src/omnimarket/routing/: routing_policy_helpers.py
src/omnimarket/runtime/: version_handshake.py
tests/: conftest.py  test_adapter_inference_bridge.py  test_adapter_linear_fill_epic_filter.py  test_aislop_hardcoded_config.py  test_all_node_entry_points_are_package_form.py  test_auto_merge_arm_effect.py  test_build_loop_entry_points.py  test_build_loop_stall_detection.py  test_catalog_generator.py  test_catalog_validator.py  test_ci_rerun_effect.py  test_cli_overnight_contract_file.py  test_commit_citation_verifier.py  test_convergence_reducer.py  test_datasource_postgres.py  test_dispatch_prompt_context.py  test_emergency_bypass_parser.py  test_generate_adapter.py  test_glm_reviewer.py  test_golden_chain_agent_coordinator_orchestrator.py  test_golden_chain_aislop_sweep.py  test_golden_chain_audit_trail_compactor.py  test_golden_chain_autopilot_orchestrator.py  test_golden_chain_baseline_capture.py  test_golden_chain_baseline_compare.py  test_golden_chain_build_dispatch_effect.py  test_golden_chain_build_loop.py  test_golden_chain_build_loop_orchestrator.py  test_golden_chain_ci_watch.py  test_golden_chain_close_out.py  test_golden_chain_closeout_effect.py  test_golden_chain_coderabbit_triage.py  test_golden_chain_compliance_sweep.py  test_golden_chain_coverage_sweep.py  test_golden_chain_create_ticket.py  test_golden_chain_dashboard_sweep.py  test_golden_chain_data_flow_sweep.py  test_golden_chain_data_verification.py  test_golden_chain_database_sweep.py  test_golden_chain_design_to_plan.py  (+128 more)
tests/integration/: test_conftest_integration_bus_publishes_smoke.py  test_kafka_integration_bus_smoke.py
tests/nodes/node_auto_merge_effect/: test_handler_auto_merge_effect.py
tests/nodes/node_ci_fix_effect/: test_handler_ci_fix.py
tests/nodes/node_conflict_hunk_effect/: test_handler_conflict_hunk.py
tests/nodes/node_filesystem_crawler_effect/: test_golden_chain_filesystem_crawler.py
tests/nodes/node_intent_event_consumer_effect/: test_golden_chain_intent_event_consumer_effect.py
tests/nodes/node_intent_query_effect/: test_golden_chain_intent_query_effect.py
tests/nodes/node_intent_storage_effect/: test_golden_chain_intent_storage_effect.py
tests/nodes/node_kreuzberg_parse_effect/: test_golden_chain_kreuzberg_parse.py
tests/nodes/node_merge_sweep_triage_orchestrator/: test_phase2_command_models.py
tests/nodes/node_polish_task_classifier/: test_handler_classifier.py
tests/nodes/node_pr_review_bot/: test_handler_llm_reviewer.py  test_handler_thread_poster_autowire.py  test_reviewer_fail_loud.py  test_workflow_runner_wiring.py
tests/nodes/node_review_thread_reconciler/: test_handler_review_thread_reconciler_autowire.py
tests/nodes/node_thread_reply_effect/: test_handler_thread_reply.py
tests/smoke/: test_overnight_dispatch_smoke.py
tests/unit/: test_ensure_sub_handlers_di.py  test_generate_adapters.py  test_handler_build_loop_executor_rename.py  test_handler_onboarding.py  test_phase_result_and_protocols.py  test_routing_policy_helpers.py
tests/unit/nodes/: test_golden_chain_build_loop_events.py  test_node_kafka_topic_emit_probe.py  test_node_merge_effect.py  test_node_worker_stall_recovery.py  test_omn8431_overseer_import_migration.py  test_omn8504_overseer_type_hint_resolution.py  test_standalone_quickstart_policy.py
tests/validation/: test_topic_naming_lint_producer_allowlist.py
tmp/pr-review-cache/: pr_64_OmniNode-ai-omnimarket_full.json  pr_66_OmniNode-ai-omnimarket_full.json
(+1013 files in other folders)
