[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnimarket"
version = "0.2.0"
description = "OmniMarket - Portable ONEX workflow package registry"
authors = [
    {name = "OmniNode.ai", email = "contact@omninode.ai"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "onex",
    "marketplace",
    "workflow",
    "portable",
    "contract",
    "event-driven",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "omnibase_core>=0.39.0",
    "omnibase-compat>=0.3.1",
    "omnibase-infra>=0.32.0",
    "pydantic>=2.12.5,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "aiokafka>=0.11.0",
    "asyncpg>=0.30.0",
    "python-dateutil>=2.9.0",
    "psycopg2-binary>=2.9.10",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/OmniNode-ai/omnimarket"
Repository = "https://github.com/OmniNode-ai/omnimarket"

[project.entry-points."onex.nodes"]
node_aislop_sweep = "omnimarket.nodes.node_aislop_sweep.handlers.handler_aislop_sweep:NodeAislopSweep"
node_merge_sweep = "omnimarket.nodes.node_merge_sweep.handlers.handler_merge_sweep:NodeMergeSweep"
node_platform_readiness = "omnimarket.nodes.node_platform_readiness.handlers.handler_platform_readiness:NodePlatformReadiness"
node_build_loop = "omnimarket.nodes.node_build_loop.handlers.handler_build_loop:HandlerBuildLoop"
node_ticket_pipeline = "omnimarket.nodes.node_ticket_pipeline.handlers.handler_ticket_pipeline:HandlerTicketPipeline"
node_close_out = "omnimarket.nodes.node_close_out.handlers.handler_close_out:HandlerCloseOut"
node_hostile_reviewer = "omnimarket.nodes.node_hostile_reviewer.handlers.handler_hostile_reviewer:HandlerHostileReviewer"
node_local_review = "omnimarket.nodes.node_local_review.handlers.handler_local_review:HandlerLocalReview"
node_pr_polish = "omnimarket.nodes.node_pr_polish.handlers.handler_pr_polish:HandlerPrPolish"
node_dod_verify = "omnimarket.nodes.node_dod_verify.handlers.handler_dod_verify:HandlerDodVerify"
node_coverage_sweep = "omnimarket.nodes.node_coverage_sweep.handlers.handler_coverage_sweep:NodeCoverageSweep"
node_compliance_sweep = "omnimarket.nodes.node_compliance_sweep.handlers.handler_compliance_sweep:NodeComplianceSweep"
node_contract_sweep = "omnimarket.nodes.node_contract_sweep.handlers.handler_contract_sweep:NodeContractSweep"
node_dashboard_sweep = "omnimarket.nodes.node_dashboard_sweep.handlers.handler_dashboard_sweep:NodeDashboardSweep"
node_data_flow_sweep = "omnimarket.nodes.node_data_flow_sweep.handlers.handler_data_flow_sweep:NodeDataFlowSweep"
node_golden_chain_sweep = "omnimarket.nodes.node_golden_chain_sweep.handlers.handler_golden_chain_sweep:NodeGoldenChainSweep"
node_runtime_sweep = "omnimarket.nodes.node_runtime_sweep.handlers.handler_runtime_sweep:NodeRuntimeSweep"
node_log_projection = "omnimarket.nodes.node_log_projection.handlers.handler_log_projection:NodeLogProjection"
node_data_verification = "omnimarket.nodes.node_data_verification.handlers.handler_data_verification:HandlerDataVerification"
node_process_watchdog = "omnimarket.nodes.node_process_watchdog.handlers.handler_process_watchdog:HandlerProcessWatchdog"
node_projection_session_outcome = "omnimarket.nodes.node_projection_session_outcome.handlers.handler_session_outcome:SessionOutcomeProjectionRunner"
node_projection_llm_cost = "omnimarket.nodes.node_projection_llm_cost.handlers.handler_projection_llm_cost:HandlerProjectionLlmCost"
node_projection_savings = "omnimarket.nodes.node_projection_savings.handlers.handler_projection_savings:HandlerProjectionSavings"
node_projection_delegation = "omnimarket.nodes.node_projection_delegation.handlers.handler_delegation:DelegationProjectionRunner"
node_projection_baselines = "omnimarket.nodes.node_projection_baselines.handlers.handler_projection_baselines:HandlerProjectionBaselines"
node_projection_registration = "omnimarket.nodes.node_projection_registration.handlers.handler_projection_registration:HandlerProjectionRegistration"
node_emit_daemon = "omnimarket.nodes.node_emit_daemon.handlers.handler_emit_daemon:HandlerEmitDaemon"
node_verify_effect = "omnimarket.nodes.node_verify_effect.handlers.handler_verify:HandlerVerify"
node_build_loop_orchestrator = "omnimarket.nodes.node_build_loop_orchestrator.handlers.handler_build_loop_orchestrator:HandlerBuildLoopOrchestrator"
node_rsd_fill_compute = "omnimarket.nodes.node_rsd_fill_compute.handlers.handler_rsd_fill:HandlerRsdFill"
node_loop_state_reducer = "omnimarket.nodes.node_loop_state_reducer.handlers.handler_loop_state:HandlerLoopState"
node_ticket_classify_compute = "omnimarket.nodes.node_ticket_classify_compute.handlers.handler_ticket_classify:HandlerTicketClassify"
node_build_dispatch_effect = "omnimarket.nodes.node_build_dispatch_effect.handlers.handler_build_dispatch:HandlerBuildDispatch"
node_closeout_effect = "omnimarket.nodes.node_closeout_effect.handlers.handler_closeout:HandlerCloseout"
node_finding_aggregator_compute = "omnimarket.nodes.node_finding_aggregator_compute.handlers.handler_finding_aggregator:HandlerFindingAggregator"
node_pr_snapshot_effect = "omnimarket.nodes.node_pr_snapshot_effect.handlers.handler_pr_snapshot:HandlerPrSnapshot"
node_pr_health_monitor = "omnimarket.nodes.node_pr_health_monitor.handlers.handler_pr_health_monitor:HandlerPrHealthMonitor"
node_design_to_plan = "omnimarket.nodes.node_design_to_plan.handlers.handler_design_to_plan:HandlerDesignToPlan"
node_ticket_work = "omnimarket.nodes.node_ticket_work.handlers.handler_ticket_work:HandlerTicketWork"
node_create_ticket = "omnimarket.nodes.node_create_ticket.handlers.handler_create_ticket:HandlerCreateTicket"
node_plan_to_tickets = "omnimarket.nodes.node_plan_to_tickets.handlers.handler_plan_to_tickets:HandlerPlanToTickets"
node_release = "omnimarket.nodes.node_release.handlers.handler_release:HandlerRelease"
node_redeploy = "omnimarket.nodes.node_redeploy.handlers.handler_redeploy:HandlerRedeploy"
node_baseline_capture = "omnimarket.nodes.node_baseline_capture.handlers.handler_baseline_capture:HandlerBaselineCapture"
node_baseline_compare = "omnimarket.nodes.node_baseline_compare"
node_pr_lifecycle_triage_compute = "omnimarket.nodes.node_pr_lifecycle_triage_compute.handlers.handler_pr_lifecycle_triage:HandlerPrLifecycleTriage"
node_nightly_loop_controller = "omnimarket.nodes.node_nightly_loop_controller"
node_pr_lifecycle_inventory_compute = "omnimarket.nodes.node_pr_lifecycle_inventory_compute.handlers.handler_pr_lifecycle_inventory:HandlerPrLifecycleInventory"
node_pr_lifecycle_fix_effect = "omnimarket.nodes.node_pr_lifecycle_fix_effect.handlers.handler_pr_lifecycle_fix:HandlerPrLifecycleFix"
node_ci_watch = "omnimarket.nodes.node_ci_watch.handlers.handler_ci_watch:HandlerCiWatch"
node_coderabbit_triage = "omnimarket.nodes.node_coderabbit_triage.handlers.handler_coderabbit_triage:HandlerCoderabbitTriage"
node_overnight = "omnimarket.nodes.node_overnight.handlers.handler_overnight:HandlerOvernight"
node_pr_lifecycle_state_reducer = "omnimarket.nodes.node_pr_lifecycle_state_reducer.handlers.handler_pr_lifecycle_state_reducer:HandlerPrLifecycleStateReducer"
node_pr_lifecycle_orchestrator = "omnimarket.nodes.node_pr_lifecycle_orchestrator.handlers.handler_pr_lifecycle_orchestrator:HandlerPrLifecycleOrchestrator"
node_pr_lifecycle_merge_effect = "omnimarket.nodes.node_pr_lifecycle_merge_effect.handlers.handler_pr_lifecycle_merge:HandlerPrLifecycleMerge"
node_retention_cleanup = "omnimarket.nodes.node_retention_cleanup.handlers.handler_retention_cleanup:NodeRetentionCleanup"

[project.entry-points."onex.node_package"]
omnimarket = "omnimarket.nodes"

[tool.uv.sources]
omnibase-core = { path = "../omnibase_core", editable = true }
omnibase-compat = { path = "../omnibase_compat", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/omnimarket"]

[tool.hatch.build]
artifacts = ["src/omnimarket/**/*.yaml"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13,<0.16.0",
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250822",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "C4", "T20", "PT", "ARG", "SLF", "RET"]
ignore = [
    "E501",      # Line too long (will fix incrementally)
    "ARG001",    # Unused function argument
    "ARG002",    # Unused method argument
    "RET504",    # Unnecessary assign before return
    "RUF012",    # Mutable class default (ClassVar annotation)
    "SIM103",    # Needless bool return
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T201", "SLF001"]
"scripts/**/*.py" = ["T201"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "omnibase_compat.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "omnibase_infra.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "omnimarket.nodes.node_pr_review_bot.adapter_github_bridge"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "omnimarket.nodes.node_pr_lifecycle_inventory_compute.*",
    "omnimarket.nodes.node_pr_lifecycle_triage_compute.*",
    "omnimarket.nodes.node_pr_lifecycle_state_reducer.*",
    "omnimarket.nodes.node_pr_lifecycle_merge_effect.*",
    "omnimarket.nodes.node_pr_lifecycle_fix_effect.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests that test individual components in isolation",
    "integration: Integration tests that test multiple components together",
    "slow: Tests that take a long time to run (>1s)",
]
