[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnimarket"
version = "0.2.0"
description = "OmniMarket - Portable ONEX workflow package registry"
authors = [
    {name = "OmniNode.ai", email = "contact@omninode.ai"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "onex",
    "marketplace",
    "workflow",
    "portable",
    "contract",
    "event-driven",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "omnibase_core>=0.39.0",
    "omnibase-compat>=0.3.1",
    "omnibase-spi>=0.20.4",
    "omnibase-infra>=0.32.0",
    "onex-change-control>=0.5.0",
    "pydantic>=2.12.5,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "packaging>=24.0",
    "aiokafka>=0.11.0",
    "asyncpg>=0.30.0",
    "python-dateutil>=2.9.0",
    "psycopg2-binary>=2.9.10",
    "httpx>=0.27.0",
    "omninode-memory>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/OmniNode-ai/omnimarket"
Repository = "https://github.com/OmniNode-ai/omnimarket"

[project.entry-points."onex.nodes"]
node_aislop_sweep = "omnimarket.nodes.node_aislop_sweep"
node_authorize = "omnimarket.nodes.node_authorize"
node_kafka_topic_emit_probe = "omnimarket.nodes.node_kafka_topic_emit_probe"
node_merge_effect = "omnimarket.nodes.node_merge_effect"
node_worker_stall_recovery = "omnimarket.nodes.node_worker_stall_recovery"
node_merge_sweep_compute = "omnimarket.nodes.node_merge_sweep_compute"
node_ledger_orchestrator = "omnimarket.nodes.node_ledger_orchestrator"
node_ledger_append_effect = "omnimarket.nodes.node_ledger_append_effect"
node_ledger_hash_compute = "omnimarket.nodes.node_ledger_hash_compute"
node_ledger_state_reducer = "omnimarket.nodes.node_ledger_state_reducer"
node_platform_readiness = "omnimarket.nodes.node_platform_readiness"
node_platform_diagnostics = "omnimarket.nodes.node_platform_diagnostics"
node_build_loop = "omnimarket.nodes.node_build_loop"
node_ticket_pipeline = "omnimarket.nodes.node_ticket_pipeline"
node_close_out = "omnimarket.nodes.node_close_out"
node_hostile_reviewer = "omnimarket.nodes.node_hostile_reviewer"
node_local_review = "omnimarket.nodes.node_local_review"
node_pr_polish = "omnimarket.nodes.node_pr_polish"
node_dod_verify = "omnimarket.nodes.node_dod_verify"
node_coverage_sweep = "omnimarket.nodes.node_coverage_sweep"
node_compliance_sweep = "omnimarket.nodes.node_compliance_sweep"
node_contract_sweep = "omnimarket.nodes.node_contract_sweep"
node_dashboard_sweep = "omnimarket.nodes.node_dashboard_sweep"
node_data_flow_sweep = "omnimarket.nodes.node_data_flow_sweep"
node_golden_chain_sweep = "omnimarket.nodes.node_golden_chain_sweep"
node_runtime_sweep = "omnimarket.nodes.node_runtime_sweep"
node_log_projection = "omnimarket.nodes.node_log_projection"
node_data_verification = "omnimarket.nodes.node_data_verification"
node_process_watchdog = "omnimarket.nodes.node_process_watchdog"
node_projection_session_outcome = "omnimarket.nodes.node_projection_session_outcome"
node_projection_llm_cost = "omnimarket.nodes.node_projection_llm_cost"
node_projection_savings = "omnimarket.nodes.node_projection_savings"
node_projection_delegation = "omnimarket.nodes.node_projection_delegation"
node_projection_overnight = "omnimarket.nodes.node_projection_overnight"
node_projection_baselines = "omnimarket.nodes.node_projection_baselines"
node_projection_registration = "omnimarket.nodes.node_projection_registration"
node_emit_daemon = "omnimarket.nodes.node_emit_daemon"
node_verify_effect = "omnimarket.nodes.node_verify_effect"
node_build_loop_orchestrator = "omnimarket.nodes.node_build_loop_orchestrator"
node_rsd_fill_compute = "omnimarket.nodes.node_rsd_fill_compute"
node_loop_state_reducer = "omnimarket.nodes.node_loop_state_reducer"
node_ticket_classify_compute = "omnimarket.nodes.node_ticket_classify_compute"
node_build_dispatch_effect = "omnimarket.nodes.node_build_dispatch_effect"
node_closeout_effect = "omnimarket.nodes.node_closeout_effect"
node_auto_merge_effect = "omnimarket.nodes.node_auto_merge_effect"
node_finding_aggregator_compute = "omnimarket.nodes.node_finding_aggregator_compute"
node_pr_snapshot_effect = "omnimarket.nodes.node_pr_snapshot_effect"
node_pr_health_monitor = "omnimarket.nodes.node_pr_health_monitor"
node_pr_review_bot = "omnimarket.nodes.node_pr_review_bot"
node_review_thread_reconciler = "omnimarket.nodes.node_review_thread_reconciler"
node_design_to_plan = "omnimarket.nodes.node_design_to_plan"
node_ticket_work = "omnimarket.nodes.node_ticket_work"
node_create_ticket = "omnimarket.nodes.node_create_ticket"
node_plan_to_tickets = "omnimarket.nodes.node_plan_to_tickets"
node_release = "omnimarket.nodes.node_release"
node_redeploy = "omnimarket.nodes.node_redeploy"
node_baseline_capture = "omnimarket.nodes.node_baseline_capture"
node_baseline_compare = "omnimarket.nodes.node_baseline_compare"
node_pr_lifecycle_triage_compute = "omnimarket.nodes.node_pr_lifecycle_triage_compute"
node_nightly_loop_controller = "omnimarket.nodes.node_nightly_loop_controller"
node_overseer_verifier = "omnimarket.nodes.node_overseer_verifier"
node_pr_lifecycle_inventory_compute = "omnimarket.nodes.node_pr_lifecycle_inventory_compute"
node_pr_lifecycle_fix_effect = "omnimarket.nodes.node_pr_lifecycle_fix_effect"
node_ci_watch = "omnimarket.nodes.node_ci_watch"
node_coderabbit_triage = "omnimarket.nodes.node_coderabbit_triage"
node_overnight = "omnimarket.nodes.node_overnight"
node_pr_lifecycle_state_reducer = "omnimarket.nodes.node_pr_lifecycle_state_reducer"
node_pr_lifecycle_orchestrator = "omnimarket.nodes.node_pr_lifecycle_orchestrator"
node_pr_lifecycle_merge_effect = "omnimarket.nodes.node_pr_lifecycle_merge_effect"
node_retention_cleanup = "omnimarket.nodes.node_retention_cleanup"
node_environment_health_scanner = "omnimarket.nodes.node_environment_health_scanner"
node_linear_triage = "omnimarket.nodes.node_linear_triage"
node_autopilot_orchestrator = "omnimarket.nodes.node_autopilot_orchestrator"
node_session_bootstrap = "omnimarket.nodes.node_session_bootstrap"
node_session_post_mortem = "omnimarket.nodes.node_session_post_mortem"
node_onboarding = "omnimarket.nodes.node_onboarding"
node_integration_test_runner = "omnimarket.nodes.node_integration_test_runner"
node_similarity_compute = "omnimarket.nodes.node_similarity_compute"
node_persona_builder_compute = "omnimarket.nodes.node_persona_builder_compute"
node_semantic_analyzer_compute = "omnimarket.nodes.node_semantic_analyzer_compute"
node_database_sweep = "omnimarket.nodes.node_database_sweep"
node_duplication_sweep = "omnimarket.nodes.node_duplication_sweep"
node_doc_freshness_sweep = "omnimarket.nodes.node_doc_freshness_sweep"
node_memory_storage_effect = "omnimarket.nodes.node_memory_storage_effect"
node_memory_retrieval_effect = "omnimarket.nodes.node_memory_retrieval_effect"
node_persona_storage_effect = "omnimarket.nodes.node_persona_storage_effect"
node_persona_retrieval_effect = "omnimarket.nodes.node_persona_retrieval_effect"
node_agent_learning_retrieval_effect = "omnimarket.nodes.node_agent_learning_retrieval_effect"
node_llm_eval_harness = "omnimarket.nodes.node_llm_eval_harness"
node_seam_parallel_executor = "omnimarket.nodes.node_seam_parallel_executor"
node_skill_overseer_verify_orchestrator = "omnimarket.nodes.node_skill_overseer_verify_orchestrator"
node_skill_dispatch_engine_orchestrator = "omnimarket.nodes.node_skill_dispatch_engine_orchestrator"
node_model_router = "omnimarket.nodes.node_model_router"
node_dispatch_worker = "omnimarket.nodes.node_dispatch_worker"
node_filesystem_crawler_effect = "omnimarket.nodes.node_filesystem_crawler_effect"
node_kreuzberg_parse_effect = "omnimarket.nodes.node_kreuzberg_parse_effect"
node_intent_storage_effect = "omnimarket.nodes.node_intent_storage_effect"
node_intent_query_effect = "omnimarket.nodes.node_intent_query_effect"
node_intent_event_consumer_effect = "omnimarket.nodes.node_intent_event_consumer_effect"
node_memory_lifecycle_orchestrator = "omnimarket.nodes.node_memory_lifecycle_orchestrator"
node_navigation_history_reducer = "omnimarket.nodes.node_navigation_history_reducer"
node_persona_lifecycle_orchestrator = "omnimarket.nodes.node_persona_lifecycle_orchestrator"
node_agent_coordinator_orchestrator = "omnimarket.nodes.node_agent_coordinator_orchestrator"
node_swarm_supervisor_orchestrator = "omnimarket.nodes.node_swarm_supervisor_orchestrator"
node_handoff_effect = "omnimarket.nodes.node_handoff_effect"
node_session_orchestrator = "omnimarket.nodes.node_session_orchestrator"
node_quality_scoring_compute = "omnimarket.nodes.node_quality_scoring_compute"
node_code_embedding_effect = "omnimarket.nodes.node_code_embedding_effect"
node_code_enrichment_effect = "omnimarket.nodes.node_code_enrichment_effect"
node_pipeline_fill = "omnimarket.nodes.node_pipeline_fill"
node_session_compose = "omnimarket.nodes.node_session_compose"
node_ticket_query = "omnimarket.nodes.node_ticket_query"
node_monitor_alert_responder = "omnimarket.nodes.node_monitor_alert_responder"
node_merge_sweep_triage_orchestrator = "omnimarket.nodes.node_merge_sweep_triage_orchestrator"
node_merge_sweep_auto_merge_arm_effect = "omnimarket.nodes.node_merge_sweep_auto_merge_arm_effect"
node_rebase_effect = "omnimarket.nodes.node_rebase_effect"
node_ci_rerun_effect = "omnimarket.nodes.node_ci_rerun_effect"
node_ci_fix_effect = "omnimarket.nodes.node_ci_fix_effect"
node_conflict_hunk_effect = "omnimarket.nodes.node_conflict_hunk_effect"
node_sweep_outcome_classify = "omnimarket.nodes.node_sweep_outcome_classify"
node_merge_sweep_state_reducer = "omnimarket.nodes.node_merge_sweep_state_reducer"
node_projection_query = "omnimarket.nodes.node_projection_query"
node_thread_reply_effect = "omnimarket.nodes.node_thread_reply_effect"
node_polish_task_classifier = "omnimarket.nodes.node_polish_task_classifier"
node_fixer_dispatcher = "omnimarket.nodes.node_fixer_dispatcher"
node_verification_receipt_generator = "omnimarket.nodes.node_verification_receipt_generator"

node_two_strike_arbiter = "omnimarket.nodes.node_two_strike_arbiter"
node_audit_trail_compactor = "omnimarket.nodes.node_audit_trail_compactor"

[project.scripts]
onex-integration-test-runner = "omnimarket.nodes.node_integration_test_runner.cli:main"

[project.entry-points."onex.node_package"]
omnimarket = "omnimarket.nodes"

[tool.uv.sources]
omnibase-compat = { git = "https://github.com/OmniNode-ai/omnibase_compat.git", branch = "main" }
omnibase-spi = { git = "https://github.com/OmniNode-ai/omnibase_spi.git", branch = "main" }
omninode-memory = { git = "https://github.com/OmniNode-ai/omnimemory.git", branch = "main" }
onex-change-control = { git = "https://github.com/OmniNode-ai/onex_change_control.git", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = ["src/omnimarket"]

[tool.hatch.build]
artifacts = ["src/omnimarket/**/*.yaml"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13,<0.16.0",
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250822",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "C4", "T20", "PT", "ARG", "SLF", "RET"]
ignore = [
    "E501",      # Line too long (will fix incrementally)
    "ARG001",    # Unused function argument
    "ARG002",    # Unused method argument
    "RET504",    # Unnecessary assign before return
    "RUF012",    # Mutable class default (ClassVar annotation)
    "SIM103",    # Needless bool return
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T201", "SLF001"]
"scripts/**/*.py" = ["T201"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "omnibase_compat.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "omnibase_infra.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "onex_change_control.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "omnimemory.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiokafka", "aiokafka.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "omnimarket.nodes.node_navigation_history_reducer.node_navigation_history_reducer"
ignore_errors = true

[[tool.mypy.overrides]]
module = "omnimarket.nodes.node_pr_review_bot.adapter_github_bridge"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["radon", "radon.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "omnimarket.nodes.node_pr_lifecycle_inventory_compute.*",
    "omnimarket.nodes.node_pr_lifecycle_triage_compute.*",
    "omnimarket.nodes.node_pr_lifecycle_state_reducer.*",
    "omnimarket.nodes.node_pr_lifecycle_merge_effect.*",
    "omnimarket.nodes.node_pr_lifecycle_fix_effect.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests that test individual components in isolation",
    "integration: Integration tests that test multiple components together",
    "slow: Tests that take a long time to run (>1s)",
    "kafka: marks tests requiring a running Kafka broker",
]
